crossplat-app-windows.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: crossplat-app-windows
  namespace: crossplat-project
  labels:
    app: crossplat-app-windows
    app.kubernetes.io/component: crossplat-app-windows
    app.kubernetes.io/instance: crossplat-app-windows
    app.kubernetes.io/part-of: crossplat-app-windows
    app.openshift.io/runtime-namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crossplat-app-windows
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: crossplat-app-windows
        deploymentconfig: crossplat-app-windows
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: crossplat-app-windows
          image: >-
            quay.io/fabdulkh/crossplat-test-windows
          ports:
            - containerPort: 8081
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: windows
      securityContext: {}
      schedulerName: default-scheduler
      tolerations:
        - key: os
          value: Windows
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: crossplat-app-windows
  namespace: crossplat-project
  labels:
    app: crossplat-app-windows
    app.kubernetes.io/component: crossplat-app-windows
    app.kubernetes.io/instance: crossplat-app-windows
    app.kubernetes.io/part-of: crossplat-app-windows
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: crossplat-app-windows
    deploymentconfig: crossplat-app-windows
  clusterIP: 172.30.165.205
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: crossplat-app-windows
  namespace: crossplat-project
  labels:
    app: crossplat-app-windows
    app.kubernetes.io/component: crossplat-app-windows
    app.kubernetes.io/instance: crossplat-app-windows
    app.kubernetes.io/part-of: crossplat-app-windows
    app.openshift.io/runtime-version: latest
spec:
  to:
    kind: Service
    name: crossplat-app-windows
    weight: 100
  port:
    targetPort: 8081-tcp
  wildcardPolicy: None
